unpackaged/main/default/objects/adroll__TrackingDataBatchSummary__c/adroll__TrackingDataBatchSummary__c.object-meta.xml
<CustomObject>
    <label>TrackingDataBatchSummary</label>
    <nameField>
        <displayFormat>TDBS-{0}</displayFormat>
        <label>TrackingDataBatchSummary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TrackingDataBatchSummary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>