unpackaged/main/default/objects/adroll__TrackingDataBatchSummary__c/fields/adroll__Date_of_Batch_class_run__c.field-meta.xml
<CustomField>
    <fullName>adroll__Date_of_Batch_class_run__c</fullName>
    <label>Date of Batch class run</label>
    <type>DateTime</type>
</CustomField>