unpackaged/main/default/objects/adroll__TrackingDataBatchSummary__c/fields/adroll__no_of_success__c.field-meta.xml
<CustomField>
    <fullName>adroll__no_of_success__c</fullName>
    <label>Success Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>